# Farmadil-System

./: .env.example  .gitignore  DESCRIPCION_SISTEMA.md  F0_readme.md  MIGRACIONES_ALEMBIC.md  README.md  SCRAPING_STRATEGY.md  alembic.ini  analisis v.04.md  docker-compose.yml  factura_prueba.xlsx  farmadil.db  main.py  plan de ejecucion v.04.md  pyproject.toml  requirements.txt  run.py
.github/: copilot-instructions.md
.github/skills/project-maintenance/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  001_initial_schema.py  002_add_product_batches.py  003_add_replenishment_rules.py
app/: main.py
app/api/v1/: __init__.py
app/core/: catalog_database.py  config.py  database.py  logging.py  security.py
app/dependencies/: __init__.py  auth.py  db.py
app/middleware/: __init__.py  error_handler.py
app/models/: __init__.py  base.py  product.py  product_batch.py  purchase.py  replenishment_rule.py  transaction.py  user.py
app/repositories/: __init__.py  product_repository.py  user_repository.py
app/schemas/: __init__.py  product.py  token.py  user.py
app/services/: __init__.py  auth_service.py  image_service.py  kpi_service.py  medication_rules.py  parser_service.py  product_service.py  sale_service.py  user_service.py
app/static/: .keep
app/templates/: base.html  ingesta_factura.html  inventory_catalog.html  inventory_load.html  inventory_search.html  landing.html  venta.html
app/tests/: conftest.py
app/utils/: __init__.py  analyze_invima.py  helpers.py  import_invima.py  seed_catalog.py
docs/: invoice_parsing_and_normalization_proposal.md
scratch/: check_db.py
scripts/: catalog_lists.py  export_catalog_lists.py
storage/invoices/: 1.xml  2.xml
(+11 files in other folders)
